attachments configurable storage
- add storage_backends.py
- configure a default storage backend using django DefaultStorage with
  custom location and URL
- configure DEBUG=true deployments to serve attachments from django
- configure an AWS S3 storage backend usung django-storages
- plumb through envvars for configuration of media and attachments storage
  paths and URLs
- modify Attachment model to set storage model to use
- update dockerfile and compose for artifact storage
- ArtifactView needs to use storage methods
- update test to support filenames that might have special chars

--- a/deploy/docker/Dockerfile-django
+++ b/deploy/docker/Dockerfile-django
@@ -74,6 +74,7 @@ RUN addgroup -S advise && \
     mkdir -p /home/advise/app/static && \
     mkdir -p /home/advise/app/assets && \
     mkdir -p /home/advise/app/staticfiles && \
+    mkdir -p /home/advise/app/attachments && \
     chown -R advise:advise /home/advise/app
 
 ENV APP_HOME=/home/advise/app
