--- a/requirements-aws.txt
+++ b/requirements-aws.txt
@@ -2,3 +2,9 @@
 boto3==1.26.88
 django-ses==3.3.0
 django-storages==1.13.2
+botocore==1.29.111
+jmespath==1.0.1
+python-dateutil==2.8.2
+s3transfer==0.6.0
+watchtower==3.0.1
+
