--- a/deploy/examples/aws/terraform.tfvars.example
+++ b/deploy/examples/aws/terraform.tfvars.example
@@ -12,6 +12,10 @@ ssh_key_name           = "my_ed25519_key"
 advise_django_debug    = true
 advise_email_backend   = "django_ses.SESBackend"
 advise_contact_address = "advise-contact@example.local"
+# advise_use_provider             = "AdVise Provider"
+# advise_registration_link      = "https://oauth.example.local/provider/register"
+# advise_recaptcha_secret_key   = "secret_key_string_here"
+# advise_recaptcha_site_key     = "site_key_string_here"
 oauth_email_backend    = "django_ses.SESBackend"
 oauth_contact_address  = "advise-auth-contact@example.local"
 contact_address        = "cloud-resource-contact@example.local"
