--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "htmx.org": "^1.8.5",
+    "ics": "^3.1.0",
     "quill-mention": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
