--- a/deploy/docker/nginx/default.conf.template
+++ b/deploy/docker/nginx/default.conf.template
@@ -36,15 +36,22 @@ server {
     #}
 }
 
+# if X-Forwarded-Proto is set on incoming, use it
+map $http_x_forwarded_proto $real_scheme {
+    default $http_x_forwarded_proto;
+    ''      $scheme;
+}
+
 server {
     listen ${PROXY_PORT};
     server_name ${APP_SERVER_FQDN}
     client_max_body_size 1G;
     keepalive_timeout 5;
+
     location / {
         proxy_pass http://advise_app/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $real_scheme;
         proxy_set_header Host $http_host;
         proxy_redirect off;
     }
