--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-typeahead": "^6.0.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-quill": "^2.0.0",
