RECAPTCHA updates and bugfixes

--- a/deploy/docker/Dockerfile-django
+++ b/deploy/docker/Dockerfile-django
@@ -14,8 +14,10 @@ WORKDIR ${APP_HOME}
 
 ARG ASSET_PATH
 ARG API_URL
+ARG RECAPTCHA_SITE_KEY
 ENV ASSET_PATH $ASSET_PATH
 ENV API_URL $API_URL
+ENV RECAPTCHA_SITE_KEY $RECAPTCHA_SITE_KEY
 
 COPY package.json package-lock.json ${APP_HOME}
 RUN npm install
