--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "date-fns": "^2.29.3",
     "htmx.org": "^1.8.5",
     "ics": "^3.1.0",
+    "jspdf": "^2.5.1",
     "quill-mention": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
