AWS infra example updates
- serve media files through cloudfront
- added variable plumbing for settings in django
- pin version numbers for important TF modules
- bugfixes

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "build": "webpack --mode production --devtool source-map"
+    "build": "webpack --mode production --devtool source-map",
+    "build-nomaps": "webpack --mode production --no-devtool"
   },
   "repository": {
     "type": "git",
