--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-quill": "^2.0.0",
     "react-table": "^7.8.0",
+    "styled-components": "^6.0.0-rc.1",
     "ts-loader": "^9.4.2",
     "validator": "^13.9.0"
   },
