--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==22.2.0
 beautifulsoup4==4.12.0
 bleach==5.0.1
 bleach-whitelist==0.0.11
+boolean.py==4.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -32,22 +33,30 @@ djangorestframework==3.14.0
 drf-yasg==1.21.5
 idna==3.4
 inflection==0.5.1
+isodate==0.6.1
 itypes==1.2.0
 Jinja2==3.1.2
+jmespath==1.0.1
 jsonschema==4.17.3
 jwcrypto==1.4.2
+license-expression==30.1.0
 Markdown==3.4.1
 MarkupSafe==2.1.2
 oauthlib==3.2.2
 packaging==23.0
+ply==3.11
 psycopg2-binary==2.9.5
 pycparser==2.21
 pydantic==1.10.2
 PyJWT==2.6.0
+pyparsing==3.0.9
 pyrsistent==0.19.3
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.6
+PyYAML==6.0
 qrcode==7.3.1
+rdflib==6.3.2
 requests==2.28.1
 requests-oauthlib==1.3.1
 ruamel.yaml==0.17.21
@@ -55,9 +64,13 @@ ruamel.yaml.clib==0.2.7
 segno==1.5.2
 six==1.16.0
 soupsieve==2.4
-sqlparse==0.4.4
+spdx-tools @ git+https://github.com/spdx/tools-python.git@cb680ccfb252e278ed9ffe23bde42487846c54d0
+sqlparse==0.4.3
+typeguard==4.0.0
 typing_extensions==4.4.0
 uritemplate==4.1.1
+uritools==4.0.1
 urllib3==1.26.13
 webencodings==0.5.1
 wrapt==1.14.1
+xmltodict==0.13.0
