add federation features
- start federating this thing! This commit adds a settings page for accepting API keys and urls. Also fix error responses on API.
- add transfer modal to select connection to share with and share options.
- report transfer changes
- enable/disable connections to preserve info about transferred cases. Fix permissions on transfer
- add signal to check cors origin against connection settings to allow transfers
- do some validation on incoming transfers, update case status and resolution.  Add case transfer reason.
- Add a bunch of transfer validation and UI stuff
- transfer vuls and artifacts. Show transfer status
- keep track of what we're transferring and prevent duplicate transfers (specifically of report so multiple cases are not created on receiving instance.
- add unit tests for incoming transfers
- allow case advisory transfers
- change default on post created field in order to transfer post times and maintain timeline. Prevent case transfers when report does not exist. Fix bug when editing a transferred report.

--- a/deploy/docker/nginx/default.conf.template
+++ b/deploy/docker/nginx/default.conf.template
@@ -40,10 +40,12 @@ map $http_x_forwarded_proto $real_scheme {
 server {
     listen ${PROXY_PORT};
     server_name ${APP_SERVER_FQDN}
-    client_max_body_size 1G;
     keepalive_timeout 5;
 
     location / {
+        # client_max_body_size moved here because it was ignored under server
+        # section [JDW]
+        client_max_body_size 4G; 
         proxy_pass http://advise_app/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $real_scheme;
