--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,32 @@
+amqp==5.1.1
 asgiref==3.6.0
+async-timeout==4.0.3
 attrs==22.2.0
 beautifulsoup4==4.12.0
+billiard==4.1.0
 bleach==5.0.1
 bleach-whitelist==0.0.11
 boolean.py==4.0
+celery==5.3.4
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 coreapi==2.3.3
 coreschema==0.0.4
 crispy-bootstrap5==0.7
+cron-descriptor==1.4.0
 cryptography==41.0.4
 defusedxml==0.7.1
 Deprecated==1.2.13
-Django==4.2.3
+Django==4.2.7
 django-allauth==0.51.0
 django-allauth-2fa @ git+https://github.com/esarneso/django-allauth-2fa.git@6bd3101916f2fca6f2ff414b3b1181bbd44d1b99
+django-celery-beat==2.5.0
 django-cors-headers==3.13.0
-django-countries==7.4.2
 django-crispy-forms==1.14.0
 django-environ==0.9.0
 django-filter==22.1
@@ -26,6 +34,7 @@ django-formtools==2.4
 django-oauth-toolkit==2.2.0
 django-otp==1.1.4
 django-qr-code==3.1.1
+django-timezone-field==6.0.1
 django-webpack-loader==1.8.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
@@ -35,27 +44,30 @@ inflection==0.5.1
 isodate==0.6.1
 itypes==1.2.0
 Jinja2==3.1.2
-jmespath==1.0.1
 jsonschema==4.17.3
 jwcrypto==1.4.2
+kombu==5.3.2
 license-expression==30.1.0
 Markdown==3.4.1
 MarkupSafe==2.1.2
 oauthlib==3.2.2
 packaging==23.0
 ply==3.11
+prompt-toolkit==3.0.39
 psycopg2-binary==2.9.5
 pycparser==2.21
 pydantic==1.10.2
 PyJWT==2.6.0
 pyparsing==3.0.9
 pyrsistent==0.19.3
+python-crontab==3.0.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.6
 PyYAML==6.0.1
 qrcode==7.3.1
 rdflib==6.3.2
+redis==5.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 ruamel.yaml==0.17.21
@@ -67,9 +79,12 @@ spdx-tools @ git+https://github.com/spdx/tools-python.git@cb680ccfb252e278ed9ffe
 sqlparse==0.4.4
 typeguard==4.0.0
 typing_extensions==4.4.0
+tzdata==2023.3
 uritemplate==4.1.1
 uritools==4.0.1
 urllib3==1.26.18
+vine==5.0.0
+wcwidth==0.2.8
 webencodings==0.5.1
 wrapt==1.14.1
 xmltodict==0.13.0
