parent b0d08e22265c7905f27eba0fdc9ac3f3ee382de0 author esarneso <emily.ecoff@gmail.com> 1701809922 -0500 committer Jonathan Woytek <jonathan.woytek@analygence.com> 1706645019 -0500
parent b0d08e22265c7905f27eba0fdc9ac3f3ee382de0
author esarneso <emily.ecoff@gmail.com> 1701809922 -0500
committer Jonathan Woytek <jonathan.woytek@analygence.com> 1706645016 -0500

Bug fixes and usability improvements

- change namespace in CSAF to use the SERVER NAME - still need to customize this section better
- fix error when dependencies don't exist
- move dependency add icon to dependcy column in component table. Several small fixes for usability
- add ability to clone component
- add gin index for affected
- fix bug with unassigning users from case. Confirm which user(s) should be unassigned.  Add modal to prompt for confirmation
- add tests for assignment/unassignment
- fix email logo
- fix bugs related to adding/notifying users
- add indicator of message thread participants besides last message author

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-typeahead": "^6.0.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -20,6 +21,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "react-table": "^7.8.0",
+    "recharts": "^2.10.3",
     "styled-components": "^6.0.0-rc.1",
     "ts-loader": "^9.4.2",
     "validator": "^13.9.0"
